--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <button class="btn__luxury">Learn more</button>
     </div>
 </main>
-<footer class="hidden">
+<footer>
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
         Coded by <a href="#">Your Name Here</a>.
